--- a/bootstrap-portfolio/portfolio.html
+++ b/bootstrap-portfolio/portfolio.html
@@ -52,7 +52,8 @@
         </div>
         <div class="row">
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
-                        <img class="portpic" src="http://placehold.it/350x350" alt="inn_logo1" /></a>
+                        <a href="../unit-4-game/index.html">
+                        <img class="portpic" src="starwars.png" alt="starwars game" /></a>
                     </div>
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
                         <img class="portpic" src="http://placehold.it/350x350" alt="inn_logo2" /></a>
