--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>tom martinson hw 12/12 12:35</title>
+    <title>tom martinson hw 1/7/2019 20:35</title>
 </head>
 <body>
-    <br>
-    <a href="bootstrap-portfolio/index.html">bootstrap assignment </a>
-    <br>
-    <a href="Responsive-Portfolio/index.html">Responsive assignment  </a>
+
+    <meta http-equiv="refresh" content="0; URL='bootstrap-portfolio/index.html'" />
+    <!-- <a href="bootstrap-portfolio/index.html">bootstrap assignment </a> -->
 </body>
 </html>
