--- a/bootstrap-portfolio/portfolio.html
+++ b/bootstrap-portfolio/portfolio.html
@@ -56,7 +56,8 @@
                         <img class="portpic" src="starwars.png" alt="starwars game" /></a>
                     </div>
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
-                        <img class="portpic" src="http://placehold.it/350x350" alt="inn_logo2" /></a>
+                        <a href="../Trivial-Quiz/index.html">
+                        <img class="portpic" src="trivial.png" alt="starwars game" /></a>
                     </div>
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
                         <img class="portpic" src="http://placehold.it/350x350" alt="inn_logo3" /></a>
