--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-    <meta http-equiv="refresh" content="0; URL='bootstrap-portfolio/index.html'" />
-    <!-- <a href="bootstrap-portfolio/index.html">bootstrap assignment </a> -->
+	<!-- <meta http-equiv="refresh" content="0; URL='bootstrap-portfolio/index.html'" /> -->
+       <a href="bootstrap-portfolio/index.html">"portfolio" page </a>
+       <a href="Trivia-Quiz/index.html">Trivia Quiz assignment</a>
 </body>
 </html>
