two small spelling corrections

--- a/bootstrap-portfolio/portfolio.html
+++ b/bootstrap-portfolio/portfolio.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
                         <a href="../Trivial-Quiz/index.html">
-                        <img class="portpic" src="trivial.png" alt="starwars game" /></a>
+                        <img class="portpic" src="trivia.png" alt="trivia quiz" /></a>
                     </div>
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
                         <img class="portpic" src="http://placehold.it/350x350" alt="inn_logo3" /></a>
