--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
 
 	<!-- <meta http-equiv="refresh" content="0; URL='bootstrap-portfolio/index.html'" /> -->
-       <a href="bootstrap-portfolio/index.html">"portfolio" page </a>
-       <a href="Trivia-Quiz/index.html">Trivia Quiz assignment</a>
+	<div>
+             <a href="bootstrap-portfolio/index.html">"portfolio" page </a>
+	</div>
+	<div>
+            <a href="Trivia-Quiz/index.html">Trivia Quiz assignment</a>
+	</div>
 </body>
 </html>
