--- a/bootstrap-portfolio/portfolio.html
+++ b/bootstrap-portfolio/portfolio.html
@@ -56,7 +56,7 @@
                         <img class="portpic" src="starwars.png" alt="starwars game" /></a>
                     </div>
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
-                        <a href="../Trivial-Game/index.html">
+                        <a href="../Trivial-Quiz/index.html">
                         <img class="portpic" src="trivia.png" alt="trivia quiz" /></a>
                     </div>
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
