removed dash in url

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
              <a href="bootstrap-portfolio/index.html">"portfolio" page </a>
 	</div>
 	<div>
-            <a href="https://trmmartinsongithub.io/Trivia-Quiz">Trivia Quiz assignment</a>
+            <a href="https://trmmartinson.github.io/TriviaQuiz/">Trivia Quiz assignment</a>
 	</div>
 </body>
 </html>
