--- a/bootstrap-portfolio/portfolio.html
+++ b/bootstrap-portfolio/portfolio.html
@@ -43,7 +43,7 @@
 
     <!-- i deviated from the inconsistent instructions since it does not make sense to decreaase the #-->
     <!-- number of images per row as resolution increases, i figured I could 1 image for sm and less, 2 for md and greater, -->
-    <!-- and 3 for xl and greater -0--->
+    <!-- and 3 for xl and greater change  -0--->
     <div class="container">
         <div class="row">
             <div class="col-3 tealwhite">
@@ -70,6 +70,7 @@
                     </div>
             </div>
         </div>
+
         <div class="container footer">
             <div class="row whiteteal skinny">
                 <hr>
