--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>tom martinson hw 1/7/2019 20:35</title>
+    <title>Tom Martinson hw 14:15</title>
 </head>
 <body>
-
 	<!-- <meta http-equiv="refresh" content="0; URL='bootstrap-portfolio/index.html'" /> -->
 	<div>
              <a href="bootstrap-portfolio/index.html">"portfolio" page </a>
