added giffy demo to two places

--- a/bootstrap-portfolio/portfolio.html
+++ b/bootstrap-portfolio/portfolio.html
@@ -60,7 +60,8 @@
                         <img class="portpic" src="trivia.png" alt="trivia quiz" /></a>
                     </div>
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
-                        <img class="portpic" src="http://placehold.it/350x350" alt="inn_logo3" /></a>
+                        <a href="https://trmmartinson.github.io/giffything/">
+                        <img class="portpic" src="giffydemo.png" alt="giffy demo" /></a>
                     </div>
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
                         <img class="portpic" src="http://placehold.it/350x350" alt="inn_logo4" /></a>
