--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 	</div>
 	<div>
             <a href="https://trmmartinson.github.io/TriviaQuiz/">Trivia Quiz assignment</a>
+    </div>
+    <div>
+            <a href="https://trmmartinson.github.io/giffything/">giffy demo (ajax api call)</a>
 	</div>
 </body>
 </html>
