added train schedule

--- a/bootstrap-portfolio/portfolio.html
+++ b/bootstrap-portfolio/portfolio.html
@@ -64,7 +64,8 @@
                         <img class="portpic" src="giffydemo.png" alt="giffy demo" /></a>
                     </div>
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
-                        <img class="portpic" src="http://placehold.it/350x350" alt="inn_logo4" /></a>
+                        <a href="https://trmmartinson.github.io/trainactivity/">
+                        <img class="portpic" src="trainactivity.png" alt="train schedule" /></a>
                     </div>
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
                         <img class="portpic" src="http://placehold.it/350x350" alt="inn_logo5" /></a>
