--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tom Martinson hw 14:15</title>
 </head>
+
 <body>
-	<!-- <meta http-equiv="refresh" content="0; URL='bootstrap-portfolio/index.html'" /> -->
-	<div>
-             <a href="bootstrap-portfolio/index.html">"portfolio" page </a>
-	</div>
-	<div>
-            <a href="https://trmmartinson.github.io/TriviaQuiz/">Trivia Quiz assignment</a>
+    <!-- <meta http-equiv="refresh" content="0; URL='bootstrap-portfolio/index.html'" /> -->
+    <div>
+        <a href="bootstrap-portfolio/index.html">"portfolio" page </a>
     </div>
     <div>
-            <a href="https://trmmartinson.github.io/giffything/">giffy demo (ajax api call)</a>
-	</div>
+        <a href="https://trmmartinson.github.io/TriviaQuiz/">Trivia Quiz assignment</a>
+    </div>
+    <div>
+        <a href="https://trmmartinson.github.io/giffything/">giffy demo (ajax api call)</a>
+    </div>
+    <div>
+        <a href="https://trmmartinson.github.io/trainactivity/">train_activity (needs API key, see note)</a>
+    </div>
 </body>
+
 </html>
