--- a/bootstrap-portfolio/portfolio.html
+++ b/bootstrap-portfolio/portfolio.html
@@ -68,7 +68,12 @@
                         <img class="portpic" src="trainactivity.png" alt="train schedule" /></a>
                     </div>
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
-                        <img class="portpic" src="http://placehold.it/350x350" alt="inn_logo5" /></a>
+                            <h3> <a href="https://github.com/trmmartinson/liri-node-app.git">liri-node-app github</a></h3>
+                    </div>
+                    <div class="col-sm-6 col-md-5 col-lg-4 ">
+                            <h3> <a href="https://dry-refuge-48259.herokuapp.com/ ">burger build heroku</a></h3>
+                       <!----- <a href="https://dry-refuge-48259.herokuapp.com/"></a>
+                        <a href="https://dry-refuge-48259herokuapp.com/"></a> ===>
                     </div>
             </div>
         </div>
