--- a/bootstrap-portfolio/portfolio.html
+++ b/bootstrap-portfolio/portfolio.html
@@ -73,7 +73,7 @@
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
                             <h3> <a href="https://dry-refuge-48259.herokuapp.com/ ">burger build heroku</a></h3>
                        <!----- <a href="https://dry-refuge-48259.herokuapp.com/"></a>
-                        <a href="https://dry-refuge-48259herokuapp.com/"></a> ===>
+                        <a href="htps://dry-refuge-48259herokuapp.com/"></a> ===>
                     </div>
             </div>
         </div>
