second try portfolio update

--- a/bootstrap-portfolio/portfolio.html
+++ b/bootstrap-portfolio/portfolio.html
@@ -51,6 +51,7 @@
             </div>
         </div>
         <div class="row">
+                    <!--
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
                         <a href="../unit-4-game/index.html">
                         <img class="portpic" src="starwars.png" alt="starwars game" /></a>
@@ -66,14 +67,15 @@
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
                         <a href="https://trmmartinson.github.io/trainactivity/">
                         <img class="portpic" src="trainactivity.png" alt="train schedule" /></a>
-                    </div>
+                    </div> -->
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
                             <h3> <a href="https://github.com/trmmartinson/liri-node-app.git">liri-node-app github</a></h3>
                     </div>
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
                             <h3> <a href="https://dry-refuge-48259.herokuapp.com/ ">burger build heroku</a></h3>
-                       <!----- <a href="https://dry-refuge-48259.herokuapp.com/"></a>
-                        <a href="htps://dry-refuge-48259herokuapp.com/"></a> ===>
+                    </div>
+                    <div class="col-sm-6 col-md-5 col-lg-4 ">
+                            <h3> <a href="https://github.com/trmmartinson/bamason">bamazon sql demo (github)</a></h3>
                     </div>
             </div>
         </div>
