--- a/bootstrap-portfolio/portfolio.html
+++ b/bootstrap-portfolio/portfolio.html
@@ -75,7 +75,7 @@
                             <h3> <a href="https://dry-refuge-48259.herokuapp.com/ ">burger build heroku</a></h3>
                     </div>
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
-                            <h3> <a href="https://github.com/trmmartinson/bamason">bamazon sql demo (github)</a></h3>
+                            <h3> <a href="https://github.com/trmmartinson/bamazon">bamazon in sql demo (github)</a></h3>
                     </div>
             </div>
         </div>
