--- a/bootstrap-portfolio/portfolio.html
+++ b/bootstrap-portfolio/portfolio.html
@@ -77,6 +77,9 @@
                     <div class="col-sm-6 col-md-5 col-lg-4 ">
                             <h3> <a href="https://github.com/trmmartinson/bamazon">bamazon in sql demo (github)</a></h3>
                     </div>
+                    <div class="col-sm-6 col-md-5 col-lg-4 ">
+                            <h3> <a href="https://github.com/trmmartinson/clicky-game">clicky game  (github)</a></h3>
+                    </div>
             </div>
         </div>
 
